[Main] CK Backend v1.1.0 (#204)
* [feat/CK-179] 로드맵 카테고리 생성을 구현한다 (#141)

* feat: 로드맵 카테고리 생성 인수테스트 작성

* feat: 로드맵 카테고리 생성 서비스 구현

* feat: 로드맵 카테고리 생성 api 구현

* docs: 로드맵 카테고리 생성 docs 작성

* refactor: 인수테스트 카테고리 생성 api로 수정

* feat: 로드맵 카테고리 앞뒤 공백 제거하도록 수정

* [feat/CK-190] 골룸 생성 시 투두리스트를 필수로 입력받는 로직을 제거한다 (#145)

* feat: 골룸 생성 시 투두리스트 필수 입력 로직 제거

* refactor: 사용하지 않는 메서드 제거

* [feat/CK-189] 네이버 OAuth 로그인 기능을 구현한다 (#144)

* feat: 회원 전화번호, 생년월일 삭제, 이메일 추가

* feat: naver oauth 구현 및 member field 변경

* feat: 네이버 로그인 uri 변경

* docs: 네이버 로그인 API 명세 작성

* feat: NaverOauthService 테스트코드 작성

* test: oauth 기능 테스트 코드 추가

* test: NaverOauthNetworkService 테스트 수정

* chore: git submodule 업데이트

---------

Co-authored-by: ChoiYoungHoon <dudgns2865@naver.com>
Co-authored-by: Ohjintaek <jt950930@gmail.com>

* feat: MemberProfile email not null 및 Member salt nullable 설정

* feat: oauth 회원가입 시 아이디에 uuid 붙히도록 수정

* design: 네이버 로그인 버튼 구현

* feat: naver oauth API 통신 구현

* feat: 네이버 로그인 주소 반환 시 응답 코드 200으로 변경

* feat: 네이버 oauth 로그인 시 콜백 변경 및 auth code 받도록 수정

* feat: 네이버 oauth api 수정

* fix: 시작 날짜가 오늘 이전이면서 모집 중인 골룸도 자동으로 시작하도록 수정

* feat: 이미지 파일 get url 요청 시 cloud front로 내려주도록 수정

* fix: 로드맵 태그 여러개일시 데이터 조회 중복 문제 해결

* fix: 파일 경로 생성시 한글과 공백은 인코딩한다

* test: test coverage 수정

* fix: file 확장자 오류를 해결한다

* fix: file이름을 저장할때 uuid로만 저장한다

* feat: 로드맵 태그에 BatchSize 적용

* [Release] 골룸 대시보드 내의 노드 반환 데이터 추가 및 골룸 목록 조회 시 모든 상태의 골룸을 조회하도록 수정한다. (#188)

* feat: 골룸 노드 목록 조회 시 노드 설명과 이미지 반환하도록 수정

* [feat/CK-227] 로드맵 골룸 조회 시 최신순일때는 모든 상태를, 마감임박 순일 땐 모집 중인 상태만 반환한다 (#185)

* chore: 패키지 경로 수정

* feat: 조건에 따른 로드맵 골룸 조회 시 쿼리 수정

* refactor: 1:N 문제 방지를 위해 @BatchSize 설정

* feat: 로드맵 골룸 응답에 골룸 상태 추가

* chore: 서브모듈 업데이트

* chore: 패키지 경로 수정

* refactor: 메서드 네이밍 수정

---------

Co-authored-by: Ohjintaek <116645747+Ohjintaek@users.noreply.github.com>

* [Release] 동시성 문제 해결 및 캐시를 적용하여 성능 개선을 한다. (#203)

* feat: 골룸 노드 목록 조회 시